--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="container nav__container">
-            <a href=""><img class="nav__logo" src="./images/logo.png" alt="Fotografi logo"></a>
+            <a href=""><img class="nav__logo" src="./di/logo.png" alt="Fotografi logo"></a>
             <ul class="nav__links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
