--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p>
                     “ Photography is a way of feeling, of touching, of loving. What you have caught on film is captured forever… It remembers little things, long after you have forgotten everything. ”
                 </p>
-                <a href="https://www.linkedin.com/in/subhojeet-das-656871198/" class="header__btn-md">Let's Talk</a>
+                <a href="https://www.linkedin.com/in/akash-kotal-8105b71b0/" class="header__btn-md">Let's Talk</a>
             </div>
         </div>
     </header>
@@ -74,7 +74,7 @@
             <img src="./di/nat2.jpg" alt="">
         </div>
     </div>
-    <a href="https://www.instagram.com/subhojeetdas1107/" target="_blank" class="contact__btn header__btn">
+    <a href="https://www.instagram.com/miss_kharghosh/" target="_blank" class="contact__btn header__btn">
         <i class="uil uil-arrow-up-right"></i>
         <p>
             <span style="transform: rotate(0deg)">F</span>
@@ -104,7 +104,7 @@
 
     <section id="about">
         <div class="container about__container">
-            <h2 class="about__title">About<br>Akash Kotal</h2>
+            <h2 class="about__title">About<br>Ar</h2>
             <a href="https://github.com/sky01green" target="_blank" class="contact__btn about__btn">
                 <i class="uil uil-arrow-up-right"></i>
                 <p>
@@ -155,7 +155,7 @@
         <div class="container gallery__container swiper mySwiper">
             <div class="gallery__head">
                 <h2 class="gallery__title">My Gallery</h2>
-                <div class="empty gallery__empty"></div>
+                <div class="empty gallery__empty">Arkapriya Kotal</div>
             </div>
             <p>
                 “When words become unclear, I shall focus with photographs. When images become inadequate, I shall be content with silence.”
