--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <section id="about">
         <div class="container about__container">
-            <h2 class="about__title">About<br>Ar</h2>
+            <h2 class="about__title">About<br>Arkapriya Kotal</h2>
             <a href="https://github.com/sky01green" target="_blank" class="contact__btn about__btn">
                 <i class="uil uil-arrow-up-right"></i>
                 <p>
