--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="container gallery__container swiper mySwiper">
             <div class="gallery__head">
                 <h2 class="gallery__title">My Gallery</h2>
-                <div class="empty gallery__empty">Arkapriya Kotal</div>
+                <div class="empty gallery__empty"></div>
             </div>
             <p>
                 “When words become unclear, I shall focus with photographs. When images become inadequate, I shall be content with silence.”
